# ImageSegmentation

./: README.md
inc/: segmentation.hpp  segmentationpar.hpp  segmentationseq.hpp
input/: imageseg.in
src/: CMakeLists.txt  README.md  edge.cu  edge.hpp  imagem.cpp  imagem.h  main.cpp  main_par.cu  main_par.hpp  main_seq.cpp  out.pgm  segmentationpar.cpp  segmentationseq.cpp  teste.pgm
test/balls/: balls_edge.pgm  balls_out_par.pgm  balls_out_seq.pgm  sementes.txt
test/logo/: sementes.txt
test/stickers/: sementes.txt  stickers.pgm  stickers_edge.pgm  stickers_out_par.pgm
